# app-warframe-manager

./: .gitignore  README.md
server/: .coverage  .env  .gitignore  Makefile  coverage.json  pyproject.toml  setenv.sh
server/.devcontainer/: devcontainer.json
server/tests/: conftest.py
server/tests/warframe_manager/zaws/application/usecases/: test_register_zaw.py
server/tests/warframe_manager/zaws/domain/entities/: test_zaws_assemble.py  test_zaws_grips.py  test_zaws_links.py  test_zaws_strikes.py
server/warframe_manager/: app.py
server/warframe_manager/kitguns/application/: app.py
server/warframe_manager/kitguns/domain/entities/: kitgun.py
server/warframe_manager/kitguns/infra/core/: settings.py
server/warframe_manager/profile/application/: app.py
server/warframe_manager/profile/infra/core/: settings.py
server/warframe_manager/zaws/application/: app.py
server/warframe_manager/zaws/application/dtos/: zaws.py
server/warframe_manager/zaws/application/usecases/: __init__.py  register_zaw.py
server/warframe_manager/zaws/domain/entities/: zaws.py
server/warframe_manager/zaws/infra/: alembic.ini
server/warframe_manager/zaws/infra/adapters/: database.py
server/warframe_manager/zaws/infra/core/: settings.py
server/warframe_manager/zaws/infra/database/: helpers.py
server/warframe_manager/zaws/infra/database/entities/: db_entities.py
server/warframe_manager/zaws/infra/database/repositories/: zaw.py
server/warframe_manager/zaws/infra/migrations/: env.py
server/warframe_manager/zaws/infra/migrations/versions/: 1c00e4eb20d4_create_tables.py
(+1 files in other folders)
